# region-templates

./: .gitignore  .project  Argument.cpp  Argument.h  BUILDING.md  CMakeLists.txt  CallBackComponentExecution.cpp  CallBackComponentExecution.h  INSTALL_AND_COMPILE_region_templates_and_dependencies_with_tuning_examples.docx  INSTALL_AND_COMPILE_regiontemplates_in_Linux.docx  Manager.cpp  Manager.h  More details on how to run only Region Templates.docx  PipelineComponentBase.cpp  PipelineComponentBase.h  README.md  SysEnv.cpp  SysEnv.h  TaskLabelBB.h  Worker.cpp  Worker.h
ResourceManager/examples/abc/: CMakeLists.txt  TaskSum.cpp
ResourceManager/examples/abcde/: CMakeLists.txt  TaskSum.cpp
ResourceManager/examples/taskDependency/: CMakeLists.txt  TaskId.cpp
examples/: CMakeLists.txt
examples/DistTransf/: DistComp.h  TaskFixProp.cpp  TaskTileProp.h
examples/DistTransf-Asyn/: DistComp.cpp  DistPipeline.cpp  TaskArgumentMat.cpp  TaskTileProp.h
examples/HelloWorld/: CMakeLists.txt  CompB.cpp  HelloWorld.cpp
examples/MorphRecon/: CMakeLists.txt  MophReconComp.h  NucleiPipeline.cpp  TaskFixRecon.cpp
examples/NucleiPipeline-Bundle/: TaskDoAll.cpp
examples/PipelineTasks/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  PipelineComponent.cpp  PipelineComponent.h  PipelineManager.cpp  TaskCompute.cpp  TaskRead.h
new-tiler/: CMakeLists.txt  utilitiesSvs.cxx  utilitiesSvs.h
new-tiler/tiler/: CMakeLists.txt  mainTiler.cxx
regiontemplates/examples/FireDetection/: CMakeLists.txt  FireTracking.cpp
regiontemplates/examples/HelloWorldRTFS/: CMakeLists.txt  HelloWorld.cpp  TaskFeatures.cpp  rtconf.xml
regiontemplates/tests/: CMakeLists.txt  Instantiate.cpp  TestConfigParsing.cpp  TestDataRegion.cpp  TestValgrind.cpp
runtime/: Argument.cpp  Argument.h  CMakeCache.txt  CMakeLists.txt  CallBackComponentExecution.cpp  CallBackComponentExecution.h  Manager.cpp  Manager.h  MessageTag.h  PipelineComponentBase.cpp  PipelineComponentBase.h  ReusableTask.cpp  ReusableTask.hpp  SdkMasterLog.csv  SysEnv.cpp  SysEnv.h  TaskLabelBB.cpp  Types.hpp  Worker.cpp  Worker.h  deviceQuery.txt  run.sh
runtime/ResourceManager/: CMakeLists.txt  ExecEngineConstants.h  ExecutionEngine.cpp  ExecutionEngine.h  Task.cpp  Task.h  TaskArgument.h  TasksQueue.cpp  TasksQueue.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolWorkingCopy.cpp  TrackDependencies.cpp
runtime/ResourceManager/tests/: CMakeLists.txt  testQueue.cpp  testSem.cpp  testTasksDependencyMap.cpp
runtime/disTiler/: BlurAOT.cpp  BlurJIT.cpp  BlurJIT.h  CMakeLists.txt  PriorityQ.h  PriorityQ.tpp  autoTiler.cpp  autoTiler.h  distTiling.cpp  distTiling.h  main.cpp  run.sh
runtime/doc/basicDescription/: Makefile  conclusions.tex  description.tex.bak  george.bib  related.tex  runtime.tex  runtime.tex.bak  scheduling.tex  subfigure.sty
runtime/examples/: CMakeLists.txt
runtime/examples/DistTransf/: CMakeLists.txt  DistComp.cpp  DistPipeline.cpp  TaskTileProp.cpp
runtime/examples/DistTransf-Asyn/: CMakeLists.txt  DistComp.h  ReadInputFileNames.cpp  TaskArgumentMat.h  TaskFixProp.h  TaskTileProp.cpp
runtime/examples/HelloWorld/: CompA.cpp  CompA.h  CompB.h  CompPrint.cpp  CompPrint.h  HelloWorld.cpp  TaskSum.cpp  TaskSum.h
runtime/examples/MorphRecon/: MophReconComp.cpp  ReadInputFileNames.h  TaskFixRecon.h  TaskTileRecon.cpp  TaskTileRecon.h
runtime/examples/NucleiPipeline-Bundle/: CMakeLists.txt  CompSeg.cpp  CompSeg.h  NucleiPipeline.cpp  NucleiPipelineBundleSub.sh  ReadInputFileNames.cpp  TaskDoAll.h
runtime/examples/PipelineTasks/: PipelineManager.cpp  TaskCompute.h  TaskRead.cpp
runtime/regiontemplates/: .cproject  .project  BGMasker.h  BasicDataSource.cpp  BasicDataSource.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Constants.h  DataRegion.cpp  DataRegion.h  DataRegion2DUnaligned.cpp  DataRegion2DUnaligned.h  DataRegionFactory.cpp  DataRegionFactory.h  DenseDataRegion2D.cpp  DenseDataRegion2D.h  DenseSvsDataRegion2D.cpp  DenseSvsDataRegion2D.h  IrregTiledRTCollection.cpp  IrregTiledRTCollection.h  ParameterSet.cpp  ParameterSet.h  PolygonListDataRegion.cpp  PolygonListDataRegion.h  RTCInterface.cpp  RTCInterface.h  RTPipelineComponentBase.cpp  RTPipelineComponentBase.h  RegTiledRTCollection.cpp  RegTiledRTCollection.h  RegionTemplate.cpp  RegionTemplate.h  SvsDataRegion.cpp  SvsDataRegion.h  TaskIO.h  ThresholdBGMasker.cpp  ThresholdBGMasker.h  TiledRTCollection.cpp  TiledRTCollection.h
runtime/regiontemplates/Utils/: FileUtils.cpp  FileUtils.h
runtime/regiontemplates/autoTiling/: BGPreTiledRTCollection.cpp  BGPreTiledRTCollection.h  CMakeLists.txt  CostFunction.cpp  CostFunction.h  HybridDenseTiledRTCollection.cpp  HybridDenseTiledRTCollection.h  IrregTiledRTCollection.cpp  IrregTiledRTCollection.h  LogSweepTilingStage.h  RTCollectionTilingPipeline.cpp  RTCollectionTilingPipeline.h  RegTiledRTCollection.cpp  RegTiledRTCollection.h  RegularTilingStage.cpp  RegularTilingStage.h  SingleTileRTCollection.cpp  SingleTileRTCollection.h  SvsDataRegion.cpp  SvsDataRegion.h  ThresholdBGRemStage.h  TiledMatCollection.h  TiledRTCollection.cpp  TiledRTCollection.h  TilingStage.h
runtime/regiontemplates/autotuning/: TuningInterface.h  TuningParamSet.h
runtime/regiontemplates/cache/: Cache.cpp  Cache.h  CacheComponent.cpp  CacheComponent.h  CachePolicy.cpp  CachePolicy.h  CachePolicyLRU.cpp  CachePolicyLRU.h  TaskMoveDR2Global.cpp  TaskMoveDR2Global.h
runtime/regiontemplates/comparativeanalysis/: DiffMaskComp.cpp  DiffMaskComp.h  TaskDiffMask.cpp  TaskDiffMask.h
runtime/regiontemplates/examples/: CMakeLists.txt  HPDC2016-15imgs-testscript.sh  HPDC2016-4imgsets-testscript.sh  HPDC2016-testscript.sh  nscale-15imgs-testscript.sh  nscale-4imgsets-testscript.sh  stampede-nscale-nm.sh  stampede-yi-ga.sh  stampede-yi-nm.sh  stampede-yi-pro.sh  tuning-multiobjective-nscale-15imgs-testscript.sh  tuning-multiobjective-yi-15imgs-testscript.sh  yi-15imgs-testscript-singleObjective-dice+dicenotcool.sh  yi-15imgs-testscript.sh
runtime/tests/: CMakeLists.txt  TestArguments.cpp  TestComponents.cpp
runtime/util/: DataPack.h
(+675 files in other folders)
